@@ -119,6 +119,8 @@ RangeArr<Warp_t, 1, maxWarps> Warp;
 RangeArr<Tile_t, 1, maxTiles> Tile;
 RangeArr<Scene_t, 1, maxScenes> Scene;
 RangeArr<CreditLine_t, 1, maxCreditsLines> Credit;
+double CreditOffsetY = 0.0;
+double CreditTotalHeight = 0.0;
 int numCredits = 0;
 int numBlock = 0;
 int numBackground = 0;
@@ -305,6 +307,7 @@ bool BlocksSorted = false;
 int SingleCoop = 0;
 std::string CheatString;
 bool GameOutro = false;
+bool GameOutroDoQuit = false;
 float CreditChop = 0.0f;
 int EndCredits = 0;
 int curStars = 0;
