@@ -15,6 +15,7 @@ Changes for 1.3.4
 -Fence BGOs now can move player together with a moving layer as vine NPCs does
 -Fixed the vanilla bug: attempt of player to jump from NPC standing together with getting pushed into the wall causes the clipping
 -Fixed the vanilla bug: resolved an incorrect behavior of a skull raft cells that makes the raft being squished when reaching a barrier wall
+-Credits look and performance has been improved
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
